Added comments to Diffusion Generation Notebook

--- a/TUTO_task_Generation_Diffusion.ipynb
+++ b/TUTO_task_Generation_Diffusion.ipynb
@@ -69,7 +69,9 @@
     "id": "A84KoUUVTJhp"
    },
    "source": [
-    "## Import Libraries"
+    "## Import Libraries\n",
+    "\n",
+    "In this section, we import all the necessary libraries required for our project. This includes PyTorch for deep learning, `soundfile` for audio processing, `tqdm` for progress bars, and the `music2latent` package for encoding and decoding audio into latent representations."
    ]
   },
   {
@@ -114,7 +116,9 @@
     "id": "-0qKq6Uvbzjo"
    },
    "source": [
-    "## Set Device"
+    "## Set Device\n",
+    "\n",
+    "Here, we set the device for PyTorch computations. If a GPU is available, we use it for faster computations; otherwise, we fall back to the CPU."
    ]
   },
   {
@@ -163,7 +167,9 @@
     "id": "oyzxBcuLTNkW"
    },
    "source": [
-    "## Download NSYNTH_GUITAR_MP3 dataset"
+    "## Download NSYNTH_GUITAR_MP3 Dataset\n",
+    "\n",
+    "In this section, we download the guitar subset of the NSynth dataset. We use `git-lfs` to handle large files and download the compressed dataset."
    ]
   },
   {
@@ -197,10 +203,10 @@
      "output_type": "stream",
      "text": [
       "Cloning into 'test-lfs'...\r\n",
-      "remote: Enumerating objects: 42, done.\u001b[K\r\n",
-      "remote: Counting objects: 100% (42/42), done.\u001b[K\r\n",
-      "remote: Compressing objects: 100% (34/34), done.\u001b[K\r\n",
-      "remote: Total 42 (delta 5), reused 40 (delta 3), pack-reused 0 (from 0)\u001b[K\r\n",
+      "remote: Enumerating objects: 42, done.\u001B[K\r\n",
+      "remote: Counting objects: 100% (42/42), done.\u001B[K\r\n",
+      "remote: Compressing objects: 100% (34/34), done.\u001B[K\r\n",
+      "remote: Total 42 (delta 5), reused 40 (delta 3), pack-reused 0 (from 0)\u001B[K\r\n",
       "Unpacking objects: 100% (42/42), 5.92 KiB | 466.00 KiB/s, done.\r\n",
       "--2024-10-21 16:31:02--  https://media.githubusercontent.com/media/SonyCSLParis/test-lfs/refs/heads/master/NSYNTH_GUITAR_MP3.zip\r\n",
       "Resolving media.githubusercontent.com (media.githubusercontent.com)... 185.199.111.133, 185.199.109.133, 185.199.110.133, ...\r\n",
@@ -402,7 +408,9 @@
     "id": "m2yLc9O_VbQ1"
    },
    "source": [
-    "## Define the Dataset Class"
+    "## Define the Dataset Class\n",
+    "\n",
+    "We define a custom `Dataset` class called `MusicLatentDataset`. This class handles the loading of audio files, encoding them into latent representations using the `music2latent` encoder, and standardizing the latent data. This prepares the data for training our diffusion model."
    ]
   },
   {
@@ -430,9 +438,7 @@
    "source": [
     "# Define the dataset class\n",
     "class MusicLatentDataset(Dataset):\n",
-    "    def __init__(self, root_dir, encoder, extensions=[\".wav\", \".mp3\", \".flac\"],\n",
-    "                 max_samples=-1):\n",
-    "\n",
+    "    def __init__(self, root_dir, encoder, extensions=[\".wav\", \".mp3\", \".flac\"], max_samples=-1):\n",
     "        self.root_dir = root_dir\n",
     "        self.encoder = encoder\n",
     "        self.extensions = extensions\n",
@@ -444,23 +450,23 @@
     "                if any(file.endswith(ext) for ext in self.extensions):\n",
     "                    self.audio_files.append(os.path.join(root, file))\n",
     "\n",
-    "        if max_samples < 0:\n",
-    "          max_samples = len(self.audio_files)\n",
+    "        # Limit the number of samples if max_samples is set\n",
+    "        if max_samples > 0:\n",
+    "            self.audio_files = self.audio_files[:max_samples]\n",
     "\n",
-    "        self.audio_files = self.audio_files[:max_samples]\n",
-    "\n",
+    "        # Encode all audio files into latent representations\n",
     "        self.latent_data = [self._encode_audio(file) for file in tqdm(self.audio_files, desc=\"Encoding Audio\")]\n",
-    "        # calculate mean and variance of each latent dimension\n",
+    "\n",
+    "        # Stack latent data and compute mean and standard deviation for normalization\n",
     "        latent_data = torch.hstack(self.latent_data)\n",
     "        self.mean = latent_data.mean(dim=1)\n",
     "        self.std = latent_data.std(dim=1)\n",
-    "        # standardize self.latent_data\n",
+    "\n",
+    "        # Standardize the latent data\n",
     "        self.latent_data = [((latent.permute(1, 0) - self.mean) / self.std).permute(1, 0) for latent in self.latent_data]\n",
+    "\n",
+    "        # Save mean and std for later use\n",
     "        torch.save({'mean': self.mean, 'std': self.std}, 'mean_std.pth')\n",
-    "        # load\n",
-    "        mean_std = torch.load('mean_std.pth')\n",
-    "        self.mean = mean_std['mean']\n",
-    "        self.std = mean_std['std']\n",
     "\n",
     "    def __len__(self):\n",
     "        return len(self.latent_data)\n",
@@ -488,12 +494,13 @@
     "        # Ensure latent is in float32\n",
     "        latent = latent.float()\n",
     "\n",
-    "        # Remove batch dimension if necessary\n",
+    "        # Remove batch dimension if necessary and limit to first 32 timesteps\n",
     "        latent = latent.squeeze(0)\n",
     "\n",
     "        return latent[..., :32]\n",
     "\n",
     "    def unnormalize(self, latent):\n",
+    "        # Unnormalize the latent data using stored mean and std\n",
     "        return latent * self.std + self.mean"
    ]
   },
@@ -504,7 +511,9 @@
     "id": "o6xyV9HIVePF"
    },
    "source": [
-    "## Define the Diffusion U-Net Model"
+    "## Define the Diffusion U-Net Model\n",
+    "\n",
+    "Here, we define the `DiffusionUnet` class, which is a U-Net architecture adapted for diffusion modeling. The model includes time conditioning to allow the network to adjust its predictions based on the diffusion time step."
    ]
   },
   {
@@ -545,7 +554,7 @@
     "        # Store channels at each layer to match encoder and decoder\n",
     "        self.channels = []\n",
     "\n",
-    "        # Downsampling path\n",
+    "        # Downsampling path (encoder)\n",
     "        self.down_layers = nn.ModuleList()\n",
     "        in_channels_current = in_channels\n",
     "        for i in range(num_layers):\n",
@@ -561,12 +570,12 @@
     "            self.channels.append(out_channels_current)\n",
     "            in_channels_current = out_channels_current\n",
     "\n",
-    "        # Bottleneck\n",
+    "        # Bottleneck layer\n",
     "        self.bottleneck = nn.Conv1d(\n",
     "            in_channels_current, in_channels_current, kernel_size=3, padding=1\n",
     "        )\n",
     "\n",
-    "        # Time embedding\n",
+    "        # Time embedding to condition on diffusion time step\n",
     "        self.time_mlp = nn.Sequential(\n",
     "            nn.Linear(1, time_embedding_size),\n",
     "            nn.ReLU(),\n",
@@ -574,7 +583,7 @@
     "            nn.ReLU(),\n",
     "        )\n",
     "\n",
-    "        # Upsampling path\n",
+    "        # Upsampling path (decoder)\n",
     "        self.up_layers = nn.ModuleList()\n",
     "        for i in reversed(range(num_layers)):\n",
     "            out_channels_current = in_channels_current // 2\n",
@@ -611,12 +620,12 @@
     "        # Time embedding\n",
     "        t_emb = self.time_mlp(t.unsqueeze(-1))  # [batch_size, channels]\n",
     "        t_emb = t_emb.unsqueeze(-1)             # [batch_size, channels, 1]\n",
-    "        h = h + t_emb                           # Broadcast addition\n",
+    "        h = h + t_emb                           # Add time embedding\n",
     "\n",
     "        # Upsampling path\n",
     "        for up in self.up_layers:\n",
     "            skip = skip_connections.pop()\n",
-    "            h = h + skip  # Element-wise addition of skip connection\n",
+    "            h = h + skip  # Skip connection\n",
     "            h = F.relu(up(h))\n",
     "\n",
     "        # Final output layer\n",
@@ -632,7 +641,9 @@
     "id": "oRh2ZP5yViP0"
    },
    "source": [
-    "## Define the RectifiedFlows Class"
+    "## Define the RectifiedFlows Class\n",
+    "\n",
+    "The `RectifiedFlows` class implements the Rectified Flow method for diffusion modeling. It includes functions for adding noise to the data and calculating the training loss. This approach is based on learning a vector field that points towards regions of high data density."
    ]
   },
   {
@@ -672,6 +683,7 @@
     "        self.P_mean = P_mean\n",
     "\n",
     "    def add_noise(self, x, noise, times):\n",
+    "        # Linearly interpolate between data and noise based on times\n",
     "        if isinstance(times, int):\n",
     "            times = float(times)\n",
     "        if isinstance(times, float):\n",
@@ -684,22 +696,28 @@
     "            times = times.reshape(shape)\n",
     "        return (1. - times) * x + times * noise\n",
     "\n",
-    "    def forward(self, model, y, sigma=None, return_loss=True,\n",
+    "    def forward(self, model, x, sigma=None, return_loss=True,\n",
     "                **model_kwargs) -> torch.Tensor:\n",
-    "        y = y.float() * self.sigma_data  # Ensure y is float32\n",
-    "        times_length = y.size(-1)\n",
+    "        # Scale the data\n",
+    "        x = x.float() * self.sigma_data\n",
+    "        # Sample random times using a sigmoid of normal distribution\n",
     "        times = torch.nn.functional.sigmoid(\n",
-    "            torch.randn(y.shape[0], dtype=torch.float32,\n",
-    "                        device=y.device) * self.P_std + self.P_mean\n",
+    "            torch.randn(x.shape[0], dtype=torch.float32,\n",
+    "                        device=x.device) * self.P_std + self.P_mean\n",
     "        )\n",
-    "        noises = torch.randn_like(y)\n",
-    "        v = y - noises\n",
-    "        noisy_samples = self.add_noise(y, noises, times)\n",
+    "        # Sample random noise\n",
+    "        noises = torch.randn_like(x)\n",
+    "        # Calculate the residual (difference between data and noise)\n",
+    "        v = x - noises\n",
+    "        # Add noise to the data\n",
+    "        noisy_samples = self.add_noise(x, noises, times)\n",
+    "        # Model prediction\n",
     "        fv = model(\n",
     "            noisy_samples,\n",
     "            times,\n",
     "            **model_kwargs\n",
     "        )\n",
+    "        # Calculate the loss\n",
     "        mse = nn.MSELoss()\n",
     "        loss = mse(v, fv)\n",
     "        if return_loss:\n",
@@ -713,7 +731,9 @@
     "id": "fbS6CEWNVo3p"
    },
    "source": [
-    "## Define the Inference Function"
+    "## Define the Inference Function\n",
+    "\n",
+    "The `inference` function performs ODE-based sampling to generate new samples from the trained diffusion model. It integrates over time from pure noise ($t=1$) to clean data ($t=0$), updating the sample at each step based on the model's predictions."
    ]
   },
   {
@@ -742,16 +762,20 @@
     "def inference(rectified_flows, net, latents_shape, num_steps):\n",
     "    sigma_data = rectified_flows.sigma_data\n",
     "    dtype = torch.float32  # Ensuring float32\n",
-    "    # Adjust noise levels based on what's supported by the network.\n",
-    "    step_size = 1 / num_steps\n",
+    "    # Initialize with pure noise\n",
     "    current_sample = torch.randn(latents_shape, dtype=dtype, device=next(net.parameters()).device)\n",
     "    times = torch.ones(latents_shape[0], dtype=dtype, device=current_sample.device)\n",
+    "    # Calculate step size\n",
+    "    step_size = 1 / num_steps\n",
     "    for i in tqdm(range(num_steps), desc=\"Sampling\", leave=False):\n",
+    "        # Predict the residual\n",
     "        v = net(\n",
     "            current_sample,\n",
     "            times\n",
     "        )\n",
+    "        # Update the sample\n",
     "        current_sample = current_sample + step_size * v\n",
+    "        # Decrease time\n",
     "        times = times - step_size\n",
     "    return current_sample / sigma_data"
    ]
@@ -763,7 +787,9 @@
     "id": "lycLpTh4VrZ7"
    },
    "source": [
-    "## Initialize the Encoder/Decoder and Datasets"
+    "## Initialize the Encoder/Decoder and Datasets\n",
+    "\n",
+    "In this section, we initialize the `EncoderDecoder` from `music2latent` and create instances of our `MusicLatentDataset` for both training and validation sets. The dataset class encodes all audio files into latent representations and standardizes them."
    ]
   },
   {
@@ -823,11 +849,9 @@
     "audio_folder_train = \"./NSYNTH_GUITAR_MP3/nsynth-guitar-train\"\n",
     "audio_folder_val = \"./NSYNTH_GUITAR_MP3/nsynth-guitar-valid\"\n",
     "\n",
-    "dataset = MusicLatentDataset(root_dir=audio_folder_train, encoder=encdec,\n",
-    "                             max_samples=-1)\n",
-    "\n",
-    "dataset_val = MusicLatentDataset(root_dir=audio_folder_val, encoder=encdec,\n",
-    "                                 max_samples=-1)\n"
+    "# When initializing the dataset, the data gets compressed using the M2L encoder\n",
+    "dataset = MusicLatentDataset(root_dir=audio_folder_train, encoder=encdec)\n",
+    "dataset_val = MusicLatentDataset(root_dir=audio_folder_val, encoder=encdec)\n"
    ]
   },
   {
@@ -853,6 +877,7 @@
    },
    "outputs": [],
    "source": [
+    "# Create data loaders\n",
     "dataloader = DataLoader(dataset, batch_size=500, shuffle=True)\n",
     "dataloader_val = DataLoader(dataset_val, batch_size=500, shuffle=False)"
    ]
@@ -864,7 +889,9 @@
     "id": "4tk-cLytVuMZ"
    },
    "source": [
-    "## Initialize the Model"
+    "## Initialize the Model\n",
+    "\n",
+    "Here, we initialize an instance of our `DiffusionUnet` model, specifying the input and output channels, and the number of layers. The model is moved to the specified device (CPU or GPU)."
    ]
   },
   {
@@ -904,7 +931,8 @@
    },
    "source": [
     "## (Optional) Load Pretrained Weights\n",
-    "### If available, you can load pretrained weights for the U-Net model."
+    "\n",
+    "If available, you can load pretrained weights for the U-Net model to continue training or for inference."
    ]
   },
   {
@@ -916,7 +944,8 @@
    },
    "outputs": [],
    "source": [
-    "model.load_state_dict(torch.load('model_diffusion.pth'))"
+    "# Load pretrained model if available\n",
+    "# model.load_state_dict(torch.load('model_diffusion.pth'))"
    ]
   },
   {
@@ -926,7 +955,9 @@
     "id": "D244ORQ7WOH5"
    },
    "source": [
-    "## Initialize RectifiedFlows"
+    "## Initialize RectifiedFlows\n",
+    "\n",
+    "We create an instance of the `RectifiedFlows` class, which will be used during training to handle noise addition and loss calculation."
    ]
   },
   {
@@ -963,7 +994,9 @@
     "id": "yHx87swlWUx3"
    },
    "source": [
-    "## Training and Validation loop"
+    "## Training and Validation Loop\n",
+    "\n",
+    "In this section, we define the training and validation loops. During training, we use the `RectifiedFlows` class to add noise to the data and compute the loss based on the model's predictions. We also perform validation to monitor the model's performance on unseen data."
    ]
   },
   {
@@ -1009,16 +1042,16 @@
     "avg_loss = -1\n",
     "avg_val_loss = -1\n",
     "\n",
-    "# tqdm on range(epochs) to track epoch-level progress\n",
+    "# Progress bar to track epoch-level progress\n",
     "progress_bar = tqdm(range(epochs), desc=f\"Epoch 1/{epochs}, Loss: {avg_loss:.4f}, Validation Loss: {avg_val_loss:.4f}\")\n",
     "\n",
     "for epoch in progress_bar:\n",
     "    model.train()\n",
     "    total_loss = 0\n",
     "    for batch in dataloader:\n",
-    "        y = batch.to(device).float()  # Ensure y is float32\n",
+    "        x = batch.to(device).float()  # Ensure x is float32\n",
     "        # Forward pass\n",
-    "        loss_dict, _ = rectified_flows(model, y)\n",
+    "        loss_dict, _ = rectified_flows(model, x)\n",
     "        loss = loss_dict['loss']\n",
     "        optimizer.zero_grad()\n",
     "        loss.backward()\n",
@@ -1032,18 +1065,18 @@
     "    val_total_loss = 0\n",
     "    with torch.no_grad():\n",
     "        for batch in dataloader_val:\n",
-    "            y = batch.to(device).float()\n",
+    "            x = batch.to(device).float()\n",
     "            # Forward pass\n",
-    "            loss_dict, _ = rectified_flows(model, y)\n",
+    "            loss_dict, _ = rectified_flows(model, x)\n",
     "            loss = loss_dict['loss']\n",
     "            val_total_loss += loss.item()\n",
     "    \n",
     "    avg_val_loss = val_total_loss / len(dataloader_val)\n",
     "\n",
-    "    # Dynamically update the description for the current epoch\n",
+    "    # Update the progress bar description with current epoch metrics\n",
     "    progress_bar.set_description(f\"Epoch {epoch + 1}/{epochs}, Loss: {avg_loss:.4f}, Validation Loss: {avg_val_loss:.4f}\")\n",
     "    \n",
-    "    # Save model\n",
+    "    # Save model after each epoch\n",
     "    torch.save(model.state_dict(), 'model_diffusion.pth')\n"
    ]
   },
@@ -1054,7 +1087,9 @@
     "id": "jUWDAYyFWXAK"
    },
    "source": [
-    "## Audio Generation"
+    "## Audio Generation\n",
+    "\n",
+    "After training, we use the trained model to generate new audio samples. We perform ODE-based sampling starting from pure noise and integrating over time to produce latent representations, which are then decoded back into audio using the `EncoderDecoder`."
    ]
   },
   {
@@ -1174,8 +1209,8 @@
     "with torch.no_grad():\n",
     "    for i in range(num_samples):\n",
     "        print(f\"Generating sample {i+1}/{num_samples}\")\n",
-    "        # Get latents_shape from dataset's mean\n",
-    "        latents_shape = (1, *dataset.mean.shape, 32)  # (batch_size=1, channels, seq_len)\n",
+    "        # Get latents_shape from dataset's mean (assuming sequence length of 32)\n",
+    "        latents_shape = (1, dataset.mean.shape[0], 32)  # (batch_size=1, channels, seq_len)\n",
     "        generated_latents = inference(rectified_flows, model, latents_shape, num_steps)\n",
     "        # Unnormalize the generated latents\n",
     "        mean_device = dataset.mean.to(generated_latents.device)\n",
@@ -1199,7 +1234,9 @@
     "id": "8_LRPpxvXQmS"
    },
    "source": [
-    "## Play Generated Audio\n"
+    "## Play Generated Audio\n",
+    "\n",
+    "Finally, we can load and play the generated audio samples to listen to the results of our diffusion model."
    ]
   },
   {
