Added comments to Autoregressive Generation Notebook

--- a/TUTO_task_Generation_Autoregressive.ipynb
+++ b/TUTO_task_Generation_Autoregressive.ipynb
@@ -17,7 +17,11 @@
     "id": "vzkoA64KUyAQ"
    },
    "source": [
-    "## Install Necessary Libraries"
+    "## Install Necessary Libraries\n",
+    "\n",
+    "In this section, we install the required libraries for our project:\n",
+    "- `x-transformers` for building our Transformer model.\n",
+    "- `encodec` for using the EnCodec neural audio codec."
    ]
   },
   {
@@ -43,7 +47,7 @@
    },
    "outputs": [],
    "source": [
-    "# First, we need to install the required libraries for the project.\n",
+    "# Install the required libraries for the project.\n",
     "!pip install x-transformers encodec"
    ]
   },
@@ -54,7 +58,9 @@
     "id": "aC6q3EtkUjWY"
    },
    "source": [
-    "## Import Libraries"
+    "## Import Libraries\n",
+    "\n",
+    "We import all the necessary modules and libraries needed for training and evaluation, such as PyTorch, `x-transformers`, and `encodec`."
    ]
   },
   {
@@ -91,7 +97,9 @@
     "id": "w5Dg8MvgUmyV"
    },
    "source": [
-    "## Set Parameters"
+    "## Set Parameters\n",
+    "\n",
+    "Here, we define global parameters for our project, such as the target bandwidth for EnCodec, the number of levels, and the number of timesteps for our sequences. We also set the device to GPU if available."
    ]
   },
   {
@@ -130,10 +138,11 @@
    ],
    "source": [
     "# Define some global parameters for the project.\n",
-    "BANDWIDTH = 1.5\n",
-    "LEVELS = 2 # 2 for bandwidth 1.5, 8 for bandwith 6.0\n",
-    "TIMESTEPS = 125\n",
+    "BANDWIDTH = 1.5  # Target bandwidth in kbps for EnCodec\n",
+    "LEVELS = 2       # Number of codebooks used in EnCodec (2 for bandwidth 1.5)\n",
+    "TIMESTEPS = 125  # Number of timesteps in each sequence\n",
     "\n",
+    "# Set device to GPU if available\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "print(device)"
    ]
@@ -145,7 +154,9 @@
     "id": "QONOX1GQU1ie"
    },
    "source": [
-    "## Download NSYNTH_GUITAR_MP3 dataset"
+    "## Download NSYNTH_GUITAR_MP3 dataset\n",
+    "\n",
+    "We download the guitar subset of the NSynth dataset, which we'll use for training our model. The dataset contains audio samples of guitar notes."
    ]
   },
   {
@@ -179,10 +190,10 @@
      "output_type": "stream",
      "text": [
       "Cloning into 'test-lfs'...\r\n",
-      "remote: Enumerating objects: 42, done.\u001b[K\r\n",
-      "remote: Counting objects: 100% (42/42), done.\u001b[K\r\n",
-      "remote: Compressing objects: 100% (34/34), done.\u001b[K\r\n",
-      "remote: Total 42 (delta 5), reused 40 (delta 3), pack-reused 0 (from 0)\u001b[K\r\n",
+      "remote: Enumerating objects: 42, done.\u001B[K\r\n",
+      "remote: Counting objects: 100% (42/42), done.\u001B[K\r\n",
+      "remote: Compressing objects: 100% (34/34), done.\u001B[K\r\n",
+      "remote: Total 42 (delta 5), reused 40 (delta 3), pack-reused 0 (from 0)\u001B[K\r\n",
       "Unpacking objects: 100% (42/42), 5.92 KiB | 433.00 KiB/s, done.\r\n",
       "--2024-10-21 13:37:15--  https://media.githubusercontent.com/media/SonyCSLParis/test-lfs/refs/heads/master/NSYNTH_GUITAR_MP3.zip\r\n",
       "Resolving media.githubusercontent.com (media.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\r\n",
@@ -282,7 +293,9 @@
     }
    ],
    "source": [
+    "# Clone the repository containing the NSYNTH_GUITAR_MP3 dataset\n",
     "!git clone https://github.com/SonyCSLParis/test-lfs.git\n",
+    "# Run the download script to get the dataset\n",
     "!bash ./test-lfs/download.sh NSYNTH_GUITAR_MP3"
    ]
   },
@@ -293,7 +306,9 @@
     "id": "kiDU_qtqVCzX"
    },
    "source": [
-    "## Dataset Class Definition"
+    "## Dataset Class Definition\n",
+    "\n",
+    "We define a custom `Dataset` class `DiscreteAudioRepDataset` to handle the discrete audio representations. This class loads audio files, encodes them using EnCodec, and provides sequences of discrete tokens suitable for training our Transformer model."
    ]
   },
   {
@@ -316,14 +331,15 @@
     "        \"\"\"\n",
     "        Args:\n",
     "            root_dir (string): Directory with all the audio files.\n",
-    "            model: The EnCodec model for encoding audio.\n",
+    "            encoder: The EnCodec model for encoding audio.\n",
     "            lazy_encode (bool): If True, encodes audio on-demand (when __getitem__ is called).\n",
     "                               If False, encodes all audio at initialization.\n",
     "            extensions (list): List of audio file extensions to include.\n",
+    "            max_samples (int): Maximum number of samples to load. -1 for all samples.\n",
     "        \"\"\"\n",
     "        self.root_dir = root_dir\n",
     "        self.extensions = extensions\n",
-    "        self.model = encoder\n",
+    "        self.encoder = encoder\n",
     "        self.lazy_encode = lazy_encode\n",
     "        self.audio_files = []\n",
     "\n",
@@ -334,7 +350,7 @@
     "                    self.audio_files.append(os.path.join(root, file))\n",
     "\n",
     "        if max_samples < 0:\n",
-    "          max_samples = len(self.audio_files)\n",
+    "            max_samples = len(self.audio_files)\n",
     "\n",
     "        self.audio_files = self.audio_files[:max_samples]\n",
     "\n",
@@ -347,22 +363,29 @@
     "\n",
     "    def __getitem__(self, idx):\n",
     "        if self.lazy_encode:\n",
+    "            # Encode the audio file on-the-fly\n",
     "            filename = self.audio_files[idx]\n",
     "            return self._encode_audio(filename)[..., :TIMESTEPS*LEVELS]\n",
     "        else:\n",
+    "            # Return the pre-encoded audio data\n",
     "            encoded_audio = self.encoded_data[idx]\n",
     "            return encoded_audio[:TIMESTEPS * LEVELS]\n",
     "\n",
     "    def _encode_audio(self, filename):\n",
+    "        # Read the audio file\n",
     "        waveform, sample_rate = sf.read(filename)\n",
-    "        waveform = torch.tensor(waveform, dtype=torch.float32)[None, None, :]  # Add batch dimension\n",
-    "        waveform = convert_audio(waveform, sample_rate, self.model.sample_rate, self.model.channels)\n",
+    "        # Convert to tensor and add batch and channel dimensions\n",
+    "        waveform = torch.tensor(waveform, dtype=torch.float32)[None, None, :]\n",
+    "        # Resample and adjust channels if necessary\n",
+    "        waveform = convert_audio(waveform, sample_rate, self.encoder.sample_rate, self.encoder.channels)\n",
     "\n",
     "        with torch.no_grad():\n",
-    "            discrete_reps = self.model.encode(waveform.to(device))\n",
+    "            # Encode the audio using EnCodec\n",
+    "            encoded_frames = self.encoder.encode(waveform.to(device))\n",
     "\n",
-    "        discrete_reps = discrete_reps[0][0].contiguous().permute(0, 2, 1).reshape(-1)\n",
-    "        return discrete_reps.cpu()"
+    "        # Flatten the codes from multiple codebooks\n",
+    "        codes = encoded_frames[0][0].contiguous().permute(0, 2, 1).reshape(-1)\n",
+    "        return codes.cpu()\n"
    ]
   },
   {
@@ -372,7 +395,9 @@
     "id": "DCvR1s8_VJId"
    },
    "source": [
-    "## Load EnCodec Model and Convert Files"
+    "## Load EnCodec Model and Convert Files\n",
+    "\n",
+    "We load the EnCodec model, which is a neural audio codec that compresses audio signals into discrete latent codes. We set the target bandwidth and prepare our datasets for training and validation by encoding the audio files into discrete tokens."
    ]
   },
   {
@@ -401,10 +426,10 @@
    "source": [
     "# Load the EnCodec model to transform the audio to discrete representation.\n",
     "codec = EncodecModel.encodec_model_24khz().to(device)\n",
-    "codec.set_target_bandwidth(BANDWIDTH)\n",
+    "codec.set_target_bandwidth(BANDWIDTH)  # Set the target bandwidth (e.g., 1.5 kbps)\n",
     "\n",
-    "# ## Load Dataset\n",
-    "# Load the NSYNTH dataset and prepare DataLoader for training and validation.\n",
+    "# Load Dataset\n",
+    "# Prepare the training and validation datasets by encoding the audio files\n",
     "audio_folder_train = \"./NSYNTH_GUITAR_MP3/nsynth-guitar-train\"\n",
     "audio_folder_val = \"./NSYNTH_GUITAR_MP3/nsynth-guitar-valid\"\n",
     "\n",
@@ -454,7 +479,9 @@
     "id": "WtVWjuDfVSoU"
    },
    "source": [
-    "## Define Transformer Model"
+    "## Define Transformer Model\n",
+    "\n",
+    "We define our Transformer model using the `x-transformers` library. The model is an autoregressive Transformer decoder with rotary positional embeddings, suitable for modeling sequences of discrete tokens."
    ]
   },
   {
@@ -473,13 +500,13 @@
     "# Define the Transformer model using TransformerWrapper and Decoder.\n",
     "model = TransformerWrapper(\n",
     "    emb_dropout=0.1,\n",
-    "    num_tokens=1024,\n",
-    "    max_seq_len=LEVELS*TIMESTEPS,\n",
+    "    num_tokens=1024,              # Vocabulary size from EnCodec (number of possible tokens)\n",
+    "    max_seq_len=LEVELS*TIMESTEPS, # Maximum sequence length\n",
     "    attn_layers=Decoder(\n",
-    "        dim=256,\n",
-    "        depth=6,\n",
-    "        heads=4,\n",
-    "        rotary_pos_emb=True,\n",
+    "        dim=256,                  # Dimension of the model\n",
+    "        depth=6,                  # Number of Transformer layers\n",
+    "        heads=4,                  # Number of attention heads\n",
+    "        rotary_pos_emb=True,      # Use rotary positional embeddings\n",
     "        attn_dropout=0.1,\n",
     "        ff_dropout=0.1\n",
     "    )\n",
@@ -494,7 +521,8 @@
    },
    "source": [
     "## (Optional) Load Pretrained Weights\n",
-    "### If available, you can load pretrained weights for the Transformer model."
+    "\n",
+    "If we have a pretrained model saved, we can load its weights to continue training or for inference."
    ]
   },
   {
@@ -507,7 +535,8 @@
    "outputs": [],
    "source": [
     "# Optionally load pretrained weights\n",
-    "model.load_state_dict(torch.load('./model_gen_autoreg_transformer.pth', map_location=device))"
+    "# Uncomment the following line if you have a pretrained model saved\n",
+    "# model.load_state_dict(torch.load('./model_gen_autoreg_transformer.pth', map_location=device))"
    ]
   },
   {
@@ -517,7 +546,9 @@
     "id": "ispKQYwLVgkE"
    },
    "source": [
-    "## Training and Validation loop"
+    "## Training and Validation loop\n",
+    "\n",
+    "We define the training loop for our Transformer model. The model is trained to minimize the cross-entropy loss between the predicted token distribution and the true next token in the sequence. We use teacher forcing during training, providing the true previous tokens as input."
    ]
   },
   {
@@ -726,7 +757,7 @@
     }
    ],
    "source": [
-    "# Define a training loop for training the Transformer model.\n",
+    "# Define the training loop for the Transformer model.\n",
     "epochs = 100\n",
     "lr = 1e-4\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=lr)\n",
@@ -738,15 +769,21 @@
     "    total_correct, total_predictions = 0, 0\n",
     "    count = 0\n",
     "\n",
+    "    # Training loop\n",
     "    for batch in dataloader:\n",
+    "        # Ensure batch is of type long (integer tokens)\n",
     "        if batch.dtype != torch.long:\n",
     "            batch = batch.long()\n",
+    "        # Add a start token at the beginning of each sequence\n",
     "        start_tokens = torch.zeros((batch.shape[0], 1), dtype=torch.long, device=batch.device)\n",
     "        batch = torch.cat([start_tokens, batch], dim=1)\n",
     "        discrete_reps = batch.to(device)\n",
     "\n",
+    "        # Forward pass\n",
     "        logits = model(discrete_reps)\n",
-    "        logits = logits.permute(0, 2, 1)\n",
+    "        logits = logits.permute(0, 2, 1)  # Rearrange logits for loss computation\n",
+    "        \n",
+    "        # Compute loss (excluding the last token)\n",
     "        loss = criterion(logits[..., :-1], discrete_reps[..., 1:])\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
@@ -754,6 +791,7 @@
     "        train_loss += loss.item()\n",
     "        count += 1\n",
     "\n",
+    "        # Compute training precision\n",
     "        preds = logits[..., :-1].argmax(dim=1)\n",
     "        targets = discrete_reps[..., 1:]\n",
     "        correct = (preds == targets).sum().item()\n",
@@ -763,6 +801,8 @@
     "    avg_train_loss = train_loss / count\n",
     "    precision = total_correct / total_predictions\n",
     "    print(f'Epoch {epoch + 1}, Train Loss: {avg_train_loss:.4f}, Precision: {precision:.4f}')\n",
+    "    \n",
+    "    # Save the model after each epoch\n",
     "    torch.save(model.state_dict(), 'model_gen_autoreg_transformer.pth')\n",
     "    \n",
     "    # Validation loop\n",
@@ -779,12 +819,14 @@
     "            batch_val = torch.cat([start_tokens_val, batch_val], dim=1)\n",
     "            discrete_reps_val = batch_val.to(device)\n",
     "\n",
+    "            # Forward pass\n",
     "            logits_val = model(discrete_reps_val)\n",
     "            logits_val = logits_val.permute(0, 2, 1)\n",
     "            loss_val = criterion(logits_val[..., :-1], discrete_reps_val[..., 1:])\n",
     "            val_loss += loss_val.item()\n",
     "            count_val += 1\n",
     "\n",
+    "            # Compute validation precision\n",
     "            preds_val = logits_val[..., :-1].argmax(dim=1)\n",
     "            targets_val = discrete_reps_val[..., 1:]\n",
     "            correct_val = (preds_val == targets_val).sum().item()\n",
@@ -803,7 +845,9 @@
     "id": "58f0Woq7Vkd3"
    },
    "source": [
-    "## Audio Generation"
+    "## Audio Generation\n",
+    "\n",
+    "After training, we use the model to generate new audio sequences. We start with a start token and iteratively sample the next token from the model's output distribution. The generated sequence of tokens is then decoded back into audio using EnCodec."
    ]
   },
   {
@@ -915,31 +959,40 @@
     }
    ],
    "source": [
-    "# Generate audio from the trained Transformer.\n",
+    "# Generate audio from the trained Transformer model.\n",
     "model.eval()\n",
-    "num_samples = 5\n",
-    "seq_len = LEVELS * TIMESTEPS\n",
-    "temperature = 1.0\n",
+    "num_samples = 5             # Number of audio samples to generate\n",
+    "seq_len = LEVELS * TIMESTEPS  # Length of each generated sequence\n",
+    "temperature = 1.0           # Sampling temperature\n",
     "os.makedirs('generated_audio', exist_ok=True)\n",
     "\n",
     "for i in range(num_samples):\n",
     "    print(f\"Generating sample {i+1}/{num_samples}\")\n",
     "    start_token = 0\n",
     "    generated = [start_token]\n",
+    "    \n",
+    "    # Generate a sequence of tokens\n",
     "    for _ in tqdm(range(seq_len), desc=\"Generating Tokens\", leave=False):\n",
     "        input_seq = torch.tensor([generated], dtype=torch.long).to(device)\n",
     "        with torch.no_grad():\n",
     "            logits = model(input_seq)[:, -1, :] / temperature\n",
     "            probs = torch.softmax(logits, dim=-1)\n",
+    "            # Sample the next token\n",
     "            next_token = torch.multinomial(probs, num_samples=1).item()\n",
     "            generated.append(next_token)\n",
+    "    \n",
+    "    # Remove the start token and convert to tensor\n",
     "    generated_sequence = torch.tensor(generated[1:], dtype=torch.long).to(device)\n",
+    "    \n",
+    "    # Reshape the sequence to match EnCodec's expected input shape\n",
     "    codes = generated_sequence.view(1, -1, LEVELS).transpose(1, 2)\n",
     "\n",
     "    with torch.no_grad():\n",
+    "        # Decode the sequence of tokens back into audio waveform\n",
     "        decoded_audio = codec.decode([(codes, None)])\n",
     "    decoded_audio = decoded_audio.squeeze().cpu().numpy().astype(np.float32)\n",
     "\n",
+    "    # Save the generated audio to a WAV file\n",
     "    output_filename = f'generated_audio/sample_{i+1}.wav'\n",
     "    sf.write(output_filename, decoded_audio, samplerate=codec.sample_rate)\n",
     "    print(f\"Saved {output_filename}\")"
@@ -952,7 +1005,9 @@
     "id": "puTbyr64VoB3"
    },
    "source": [
-    "## Play Generated Audio"
+    "\n",
+    "Play Generated Audio\n",
+    "Finally, we can load and play the generated audio samples to listen to the results of our autoregressive generation."
    ]
   },
   {
