solved minor formating issue

--- a/TUTO_task_Generation_Autoregressive.ipynb
+++ b/TUTO_task_Generation_Autoregressive.ipynb
@@ -1005,8 +1005,8 @@
     "id": "puTbyr64VoB3"
    },
    "source": [
+    "## Play Generated Audio\n",
     "\n",
-    "Play Generated Audio\n",
     "Finally, we can load and play the generated audio samples to listen to the results of our autoregressive generation."
    ]
   },
